# django_toyproject

./: .gitignore  Dockerfile  deploy-docker-secrets.py  deploy.sh  docker-run-secrets.py  pyproject.toml  requirements.txt  secrets.json
.cert/: WvlHT74S70lxjZOSM79dWz14z5Bkqea45YSQ8dGjyQQ  ZBk1EW8vPYDyQgyTyr0GQ_jqri5IWfd1PgFtbHGeUBk
.config/: gunicorn.py  supervisord.conf  toyproject.nginx
app/: crawling.py  db.sqlite3
app/companys/: admin.py  apps.py  models.py  urls.py  views.py
app/companys/migrations/: 0001_initial.py  0002_info.py  0003_auto_20200226_1748.py  0004_mask_info.py
app/config/: settings.py  urls.py  views.py
app/mail/: forms.py  urls.py  views.py
app/members/: admin.py  models.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_auto_20200226_1629.py
app/templates/: index.html
app/templates/mail/: index.html  success.html
app/templates/members/: login.html  user_setting.html
app/templates/popup/: test.html
