[tool.poetry]
name = "toyproject"
version = "0.1.0"
description = ""
authors = ["JEONGSUJI <wtw9611@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"
gunicorn = "^20.0.4"
supervisor = "^4.1.0"
beautifulsoup4 = "^4.8.2"
django-extensions = "^2.2.8"
requests = "^2.23.0"
lxml = "^4.5.0"
notebook = "^6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
